# quap_validator

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  mkdocs.yml  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docs.yml
docs/: Makefile  conf.py  index.md  index.rst  install.md  installation.rst  make.bat  usage.md  usage.rst
src/: cli.py
src/adapters/: shapefile_adapter.py
src/core/: engine.py
src/quap_validator/: __init__.py  cli.py
src/templates/: parcels.json
src/validator/: cli.py
src/validator/adapters/: csv_adapter.py  geoparquet_adapter.py  gpkg_adapter.py
src/validator/core/: compression.py  duck.py  engine.py  geom_alias.py  progress_bar.py  reporting.py  templates.py
src/validator/templates/: gsa_lpis_relationship.json  gsa_population.json  gsa_ua_claimed.json  index.json  interventions.json  lpis_population.json  regions.json  template.example.json  template.schema.json
tests/: __init__.py  test_geom_alias.py  test_quap_validator.py  test_spatial_extension.py
