[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quap_validator"
version = "0.1.0"
description = "A tool to validate QUAP data."
readme = "README.rst"
authors = [
  {name = "ANASTASAKIS Konstantinos", email = "konstantinos.anastasakis@"}
]
maintainers = [
  {name = "ANASTASAKIS Konstantinos", email = "konstantinos.anastasakis@"}
]
classifiers = [

]
license = {text = "BSD license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/konanast/quap_validator/issues"
changelog = "https://github.com/konanast/quap_validator/blob/master/changelog.md"
homepage = "https://github.com/konanast/quap_validator"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

